# holz_logistik_app

./: .env  .gitignore  README.md  l10n.yaml  pubspec.yaml  test.dart  testmain.dart
.github/workflows/: main.yaml
android/: .gitignore  build.gradle
android/app/: build.gradle
holz_logistik_backend/: README.md  pubspec.yaml
holz_logistik_backend/.github/: cspell.json
holz_logistik_backend/lib/: test_data_generation.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  bootstrap.dart  main.dart  main_development.dart  main_production.dart  main_staging.dart
lib/app/: app.dart
lib/config/: api_config.dart  constants.dart
lib/data/: data_provider.dart  database_helper.dart  models.dart  tables.dart
lib/database/: database_helper.dart  tables.dart
lib/models/: data_item.dart  location.dart  models.dart  shipment.dart  user.dart
lib/providers/: data_provider.dart  location_provider.dart  sync_provider.dart
lib/screens/: analytics_screen.dart  archive_screen.dart  home_page.dart  home_screen.dart  login_page.dart  login_screen.dart  main_screen.dart  map_page.dart  map_screen.dart  register_page.dart  register_screen.dart  reset_password_page.dart  reset_password_screen.dart  settings_page.dart  settings_screen.dart  splash_screen.dart
lib/services/: api_service.dart  (+5 more)
linux/: CMakeLists.txt  my_application.cc
resources/: desktop_setup.iss
ressources/: desktop_setup.iss
test/: widget_test.dart
web/: index.html  manifest.json
web_server/: Cargo.toml
web_server/src/: main.rs
windows/: CMakeLists.txt
(+489 files in other folders)
